根据需求设置了loading动画效果

--- a/app/src/main/res/layout/activity_loading_circle_activiy.xml
+++ b/app/src/main/res/layout/activity_loading_circle_activiy.xml
@@ -11,5 +11,12 @@
         android:layout_height="60dp"
         android:layout_centerInParent="true"
         />
-
+    <TextView
+        android:id="@+id/text1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ddddd"
+        android:textColor="#111111"
+        android:layout_alignParentBottom="true"
+        />
 </RelativeLayout>
