--- a/app/src/main/res/layout/layout_count_circle.xml
+++ b/app/src/main/res/layout/layout_count_circle.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl_rootLayout"
+    xmlns:ml="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
     <TextView
         android:id="@+id/tv_count_timer"
@@ -9,13 +10,12 @@
         android:gravity="center"
         android:text="15"
         />
-    <widget.CountCircleView
+    <widget.LogicCountView
         android:id="@+id/view_count_circle"
-        xmlns:ml="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        ml:paintSize="6dp"
+        ml:paintSize="2dp"
         ml:paintColor="#ff0000"
         />
 
