1.修复波浪纹效果缺少一半的问题

--- a/app/src/main/res/layout/activity_wave.xml
+++ b/app/src/main/res/layout/activity_wave.xml
@@ -7,5 +7,5 @@
     <widget.WaveView
         android:id="@+id/wave"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="150dp" />
 </RelativeLayout>
