--- a/app/src/main/res/layout/activity_loading_circle_activiy.xml
+++ b/app/src/main/res/layout/activity_loading_circle_activiy.xml
@@ -19,4 +19,13 @@
         android:textColor="#111111"
         android:layout_alignParentBottom="true"
         />
+    <widget.MaterialCircleView
+        android:id="@+id/materialCircleView"
+        xmlns:ml="http://schemas.android.com/apk/res-auto"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_centerInParent="true"
+        ml:circleColor="#ff0000"
+        ml:bGradient="false"
+        />
 </RelativeLayout>
