--- a/app/src/main/res/layout/activity_indicator.xml
+++ b/app/src/main/res/layout/activity_indicator.xml
@@ -4,9 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="project.ljy.animationutils.IndicatorActivity">
-    <widget.PointView
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vg_page"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    <widget.IndicatorView
+        android:id="@+id/view_indicator"
         android:layout_width="100dp"
-        android:layout_height="24dp"
-        android:layout_centerInParent="true"
+        android:layout_height="20dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="70dp"
         />
 </RelativeLayout>
