--- a/app/src/main/res/layout/activity_indicator.xml
+++ b/app/src/main/res/layout/activity_indicator.xml
@@ -16,5 +16,13 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="70dp"
+        android:visibility="invisible"
         />
+    <widget.MyPageIndicator
+        android:id="@+id/view_my_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="70dp" />
 </RelativeLayout>
