--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,9 @@
         <attr name="circleWidth" format="dimension"/>
         <attr name="radius" format="dimension"/>
     </declare-styleable>
+
+    <declare-styleable name="IndicatorView">
+        <attr name="pointDiameter" format="dimension"/>
+        <attr name="pointColor" format="color" />
+    </declare-styleable>
 </resources>
